2008-01-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.csproj: Updated VS solution files. Patch by Andrés G.
	  Aragoneses.

2007-12-15  Lluis Sanchez Gual <lluis@novell.com> 

	* mono-addins.pc.in: Update assembly paths.

2007-12-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Generate and install policy files for old Mono.Addins
	  versions.
	* Mono.Addins.Database/AddinScanner.cs: Improved reporting of reflection
	  exceptions.

2007-12-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: The addinstoUpdate list may contain
	  add-in with a version not installed (e.g. if it comes from an add-in
	  reference). Make sure the correct add-in is found in this case.

2007-12-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization/GettextDomain.cs,
	  Mono.Addins.Localization/IPluralAddinLocalizer.cs,
	  Mono.Addins.Localization/GettextLocalizer.cs, Mono.Addins.mdp,
	  Mono.Addins/AddinLocalizer.cs, Makefile.am: Add support for plural
	  forms.

2007-12-04  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Localization/GettextDomain.cs: Fix bug in string
	  unmarshalling.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/RuntimeAddin.cs, Mono.Addins/Addin.cs: Added more informative
	  implementation of ToString ().
	* Mono.Addins/AddinSessionService.cs, Mono.Addins/AddinManager.cs: Added
	  CurrentAddin property, which returns the add-in on which the calling
	  method is implemented. Same for CurrentLocalizer.
	* Mono.Addins/ExtensionNode.cs: Allow getting the extension context bound to
	  an extension node.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanner.cs: ScanNodeSet may change the
	  ExtensionNodeSets collection, so it is necessary to make a copy when
	  iterating with it.

2007-12-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TypeExtensionNode.cs: Made the description of
	  TypeExtensionNode shorter.