@@ -1,3 +1,9 @@
+2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins/ExtensionTree.cs: Since Mono r93079, GetFields don't return
+	  private fields from base classes. Fixed the code to work with the new
+	  behavior.
+
 2008-01-07  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins.csproj: Updated VS solution files. Patch by Andrés G.
